--- a/MuscleMate/package.json
+++ b/MuscleMate/package.json
@@ -20,6 +20,7 @@
     "@iconify/react": "^4.1.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus": "^1.14.7",
     "docusaurus-plugin-search-local": "^2.0.1",
     "iconify": "^1.4.0",
     "iconify-icon": "^2.0.0",
